Update FoxLauncher